fix(twitch): Make text in viewercard readable (#245)
* Remove moments todo

* Update usercard colors

* Bump version

* fixup! Update usercard colors

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Twitch Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/twitch
 @homepageURL    https://github.com/catppuccin/userstyles/tree/main/styles/twitch
-@version        1.1.11
+@version        1.1.12
 @description    Soothing pastel theme for Twitch
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/twitch/catppuccin.user.css
@@ -252,7 +252,21 @@
       color: @text;
     }
 
-    /* TODO: moments */
+    /* Viewercard username */
+
+    div.viewer-card-header__display-name h4 {
+      color: @accent-Color !important;
+    }
+
+    /* Viewercard metadata */
+
+    div.viewer-card-header__display-name svg:not(button svg) {
+      color: @subtext1;
+    }
+
+    div.viewer-card-header__display-name p {
+      color: @text !important;
+    }
 
     & .carousel-metadata {
       background: @crust;
